Make it possible to deviate the start date based on the due date (and vice versa)